--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile group: 'javax.servlet', name: 'jstl', version:'1.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.springframework', name: 'spring-test', version:"${springVersion}"
+	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.46'
 }
