--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,12 +5,12 @@
 	version="3.1">
 	<display-name>MVCFilmSite</display-name>
 	<welcome-file-list>
-		<welcome-file>home.jsp</welcome-file>
+		<welcome-file>/WEB-INF/views/home.jsp</welcome-file>
 	</welcome-file-list>
 
  	<servlet>
 		<servlet-name>FilmApp</servlet-name>
-		<servlet-class></servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
