--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,5 +17,11 @@
 		<servlet-name>FilmApp</servlet-name>
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
+	
+	
+	
+<!-- 	<listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+</listener> -->
  
 </web-app>
